tests/rosetta/out/Smalltalk/anonymous-recursion-2.out
/workspace/mochi/tests/rosetta/out/Smalltalk/anonymous-recursion-2.st:18: parse error, expected '|' or identifier
