tests/rosetta/out/Smalltalk/anonymous-recursion-2.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| a b fib i main t |
fib := [:n | ((n < 2)) ifTrue: [
  n
] .
a := 0.
b := 1.
i := 1.
[(i < n)] whileTrue: [
  t := (a + b).
  a := b.
  b := t.
  i := (i + 1).
]
.
b ].
main := [ | {-1. 0. 1. 2. 3. 4. 5. 6. 7. 8. 9. 10} do: [:i |
  ((i < 0)) ifTrue: [
    Transcript show: ((('fib(' + (i asString)) + ') returned error: negative n is forbidden')) printString; cr.
  ] ifFalse: [
    Transcript show: (((('fib(' + (i asString)) + ') = ') + (fib value: i asString))) printString; cr.
  ].
]
. ].
main value.
